# citracer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  paper_resolution.yml
.github/workflows/: docs.yml  release.yml  tests.yml
citracer/: __init__.py  __main__.py  analytics.py  api_types.py  cli.py  constants.py  cross_citation.py  diff.py  exporter.py  keyword_matcher.py  manifest.py  metadata_cache.py  metadata_enrichment.py  models.py  pdf_parser.py  preprint_resolver.py  reference_resolver.py  source_resolver.py  tracer.py  user_config.py  utils.py  visualizer.py
citracer/templates/: overlay.html.tmpl
docs/: development.md  how-it-works.md  index.md  installation.md  limitations.md
docs/output/: analytics.md  export.md  visualization.md
docs/usage/: cli-reference.md  diff.md  quick-start.md  reverse.md  semantic.md
tests/: test_cross_citation.py  test_diff.py  test_exporter.py  test_keyword_matcher.py  test_metadata_cache.py  test_metadata_enrichment.py  test_pdf_parser.py  test_reference_resolver.py  test_source_resolver.py  test_tracer.py  test_user_config.py  test_utils.py
tests/fixtures/: sample.tei.xml
